# yolov8n_rk3588

./: CMakeLists.txt  README.md
include/: rknn_net.h  yolo_multi_npu.h  yolov8_post.h
src/: main.cc  picture_demo.cc  rknn_net.cc  video_demo.cc  yolov8_post.cc
tools/: dataset.txt  modify_no_tail.py  modity_no_boxhead_transpose.py  onnx2rknn_export.py  yolov8_box_head.py  yolov8_tail.py
